--- a/css/register.css
+++ b/css/register.css
@@ -8,7 +8,7 @@
 }
 
 .form-signin {
-  max-width: 330px;
+  max-width: 500px;
   margin: 0 auto;
 }
 
@@ -52,5 +52,10 @@
   padding-bottom: 250px;
   margin-left: -10px;
   margin-right: -10px;
-  background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.5)), url("/images/regbg.jpg");
+  background-image: linear-gradient(rgba(255,255,255,0.7),rgba(255,255,255,0.7)), url("/images/regbg.jpg");
   background-size: cover;
+}
+
+#state {
+    height: auto;
+}
